force-app/main/default/objects/Product_Category__c/fields/Enqix_Id__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Id__c</fullName>
    <externalId>true</externalId>
    <label>Enqix Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>