force-app/main/default/objects/Product_Category__c/fields/Is_Industry_Office__c.field-meta.xml
<CustomField>
    <fullName>Is_Industry_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Industry Office</label>
    <type>Checkbox</type>
</CustomField>