force-app/main/default/objects/Product_Category__c/fields/is_industry_other__c.field-meta.xml
<CustomField>
    <fullName>is_industry_other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is industry other</label>
    <type>Checkbox</type>
</CustomField>