force-app/main/default/objects/Product_Category__c/fields/is_industry_retail__c.field-meta.xml
<CustomField>
    <fullName>is_industry_retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is industry retail</label>
    <type>Checkbox</type>
</CustomField>