force-app/main/default/objects/Product_Category__c/fields/Product_Category_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Key__c</fullName>
    <externalId>true</externalId>
    <label>Product Category Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>